--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@huddle01/react": "^0.0.10",
+    "ipfs-http-client": "^60.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.0"
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.11.0",
+    "web-vitals": "^2.1.4",
+    "web3": "^4.1.1",
+    "web3modal": "^1.9.12",
+    "ethers":"^5.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
